修正课程设计的测试用例

--- a/TestFiles/designInput/test2.1-2.sample
+++ b/TestFiles/designInput/test2.1-2.sample
@@ -1,5 +1,5 @@
 //while和if嵌套测试，求最大值、最小值和平均值
-void main()
+main()
 {
 	int a=0;
 	int max = 0;
@@ -20,7 +20,7 @@ void main()
 		sum = sum+a;
 		i = i+1;
 	}
-	write('最大 最小 平均值：');
+	write("最大 最小 平均值：");
 	write('\n');
 	write(max);
 	write('\n');
