--- a/TestFiles/designInput/test2.4-3.sample
+++ b/TestFiles/designInput/test2.4-3.sample
@@ -1,3 +1,14 @@
+
+int chengfabiao(int);
+
+main()
+{
+   int n;
+   n=read();
+   chengfabiao(n);
+}
+
+
 //双重for嵌套，输入一个数n,输出前n列乘法表
 int chengfabiao(int n)
 {
@@ -13,15 +24,3 @@ int chengfabiao(int n)
     }
   return 0;
 }
-
-
-
-
-main()
-{
-   int n;
-   n=read();
-   chengfabiao(n);
-}
-
-
