--- a/TestFiles/designInput/test2.5.sample
+++ b/TestFiles/designInput/test2.5.sample
@@ -1,14 +1,14 @@
 //测试for嵌套，break
 //求素数
-void main()
+main()
 {
 	int n=0;
 	int i=0;
 	int j=0;
 	n = read();
-	write('小于');
+	write("小于");
 	write(n);
-	write('的素数有：');
+	write("的素数有：");
 	write('\n');
 	for(i=2;i<n;i=i+1)
 	{
