添加四元式生成

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,9 @@ bin/
 /TestFiles/basic/*.js
 /TestFiles/basic/*.txt
 /TestFiles/basic/*.svg
+/TestFiles/designInput/*.js
+/TestFiles/designInput/*.txt
+/TestFiles/designInput/*.svg
 /test.svg
 /TestFiles/basic/basic.zip
 /CompilationDesign/
